@@ -1,3 +1,4 @@
+2075 [AVS Script Creator] improve input DAR detection when using no index files
 2074 [AVS Script Creator] + [OneClick] improve input DAR detection when using index files
 2073 [Settings] added option to select if ITU Aspect Ratio should be used by default (enabled by default). Feature request #3057378
 2072 [Audio Encoder] added handling of channel count mismatch
